# AutoAD

./: .gitignore  README.md  implementation plan.md  index.html  pyproject.toml
.github/workflows/: ci.yml
plan/: anomaly_detection_model_selection_plan.md
scripts/: 01_download_ucr.py  02_run_e2e_minimal.py  03_run_e2e_full.py  _gen_hero.py
src/autoad/data/: features.py  loaders.py  synthetic.py  synthetic_suite.py  windowing.py
src/autoad/eval/: metrics.py  regret.py
src/autoad/models/: __init__.py  base.py  classical.py
src/autoad/pseudo/: cluster_holdout.py  difficulty.py  synthetic_score.py
src/autoad/selection/: aggregate.py
src/autoad/utils/: cache.py  io.py
tests/smoke/: test_phase_0_smoke.py  test_phase_1_smoke.py  test_phase_2_smoke.py  test_phase_3_smoke.py
