[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoad"
version = "0.1.0"
description = "Multi-Source Pseudo-Anomaly Selection for unsupervised time-series AD model selection"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "AutoAD authors" }]

dependencies = [
  # Core scientific stack
  "numpy>=1.26,<2.2",
  "scipy>=1.11",
  "pandas>=2.1",
  "polars>=1.0",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",

  # AD detectors
  "pyod>=1.1.3",
  "stumpy>=1.13",
  "tslearn>=0.6.3",
  "hdbscan>=0.8.33",
  "statsmodels>=0.14",

  # Feature extraction
  "tsfresh>=0.20.2",

  # Deep TS models
  "torch>=2.2",
  "darts>=0.30",

  # Clustering, optimal transport, rank aggregation
  "POT>=0.9",
  "choix>=0.3.5",

  # Evaluation metrics
  "prts>=1.0.0.3",

  # Experiment tracking and config
  "mlflow>=2.10",
  "hydra-core>=1.3",
  "omegaconf>=2.3",

  # Performance
  "numba>=0.59",
  "joblib>=1.3",

  # I/O and utilities
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "requests>=2.31",
  "click>=8.1",

  # Dev tools (kept here for one-command install)
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[project.optional-dependencies]
gpu = [
  # Installed separately via index URL for CUDA 12.x; keeping placeholder here.
]
dev = [
  "ipython>=8.20",
  "jupyterlab>=4.0",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autoad*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["vendored", "data", "runs", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --tb=short"
markers = [
  "smoke: phase smoke tests (fast, run end-to-end on 5-series subset)",
  "unit: unit tests",
  "slow: tests that take more than 30s",
]
